# ecg-scd-mvp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.inference.txt
backend/app/: __init__.py  biomarker.py  config.py  ecg_io.py  inference.py  main.py  schemas.py
frontend/: app.js  index.html  styles.css
models/: model_registry.example.json
tests/: test_biomarker_interpreter.py  test_ecg_io.py
