[project]
name = "ecg-scd-mvp"
version = "0.1.0"
description = "Physician-facing exploratory wrapper for the ECG-SCD research pipeline."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "scipy>=1.12.0",
  "wfdb>=4.1.2",
]

[project.optional-dependencies]
inference = [
  "torch>=2.3.0",
  "scikit-learn>=1.4.0",
  "tqdm>=4.66.0",
  "joblib>=1.3.0",
  "neurokit2>=0.2.7",
  "biosppy>=2.2.0",
  "peakutils>=1.3.5",
  "statsmodels>=0.14.0",
  "xgboost>=2.0.0",
]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
